/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * user guide available at https://docs.gradle.org/4.8.1/userguide/java_library_plugin.html
 */

plugins {
    id 'application'
  	id 'org.openjfx.javafxplugin' version '0.0.7'
}

javafx {
    modules = [ 'javafx.controls', 'javafx.fxml']
}

tasks.withType(JavaCompile) {
	options.encoding='UTF-8'
}


sourceCompatibility = 11

dependencies {
    testImplementation 'junit:junit:4.12'    
}


mainClassName = 'javafx.Main'

repositories {
    mavenCentral()
}
